public/themes/custom/asuntotuotanto/src/scss/06_components/content/application/_application.scss
.application {
  &.application--submitted-teaser {
    background-color: var(--color-white);
    border: 1px solid var(--color-black-10);
    margin-bottom: $spacing-and-half;

    @media screen and (min-width: $breakpoint-l) {
      display: flex;
    }

    &:not(:first-of-type) {
      margin-top: $spacing-and-half;
    }
  }

  &.application--draft-teaser {
    background-color: var(--color-black-10);
    border: 1px solid var(--color-black-10);
    margin-bottom: $spacing-and-half;

    @media screen and (min-width: $breakpoint-l) {
      display: flex;
    }

    &:not(:first-of-type) {
      margin-top: $spacing-and-half;
    }
  }

  &.application--form-teaser {
    background-color: var(--color-white);

    @media screen and (min-width: $breakpoint-l) {
      display: flex;
    }
  }
}

.application__image {
  margin: 0;
  display: flex;

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  .application--submitted-teaser &,
  .application--draft-teaser &,
  .application--form-teaser & {
    @media screen and (min-width: $breakpoint-l) {
      width: 30%;
    }
  }
}

.application__wrapper {
  .application--submitted-teaser & {
    padding: $spacing-and-half $spacing;

    @media screen and (min-width: $breakpoint-l) {
      width: 70%;
      display: flex;
    }
  }

  .application--draft-teaser & {
    padding: $spacing-and-half $spacing;

    @media screen and (min-width: $breakpoint-l) {
      width: 70%;
      display: flex;
    }
  }

  .application--form-teaser & {
    background-color: var(--color-white);
    padding: $spacing-and-half 0;
    position: relative;

    @media screen and (min-width: $breakpoint-l) {
      width: 70%;
      display: flex;
      padding: $spacing-and-half $spacing;
    }
  }
}

.application__content {
  .application--draft-teaser &,
  .application--submitted-teaser & {
    @media screen and (min-width: $breakpoint-l) {
      flex-grow: 1;
    }
  }

  .application--form-teaser & {
    margin-top: $spacing;
    margin-bottom: $spacing-and-half;

    @media screen and (min-width: $breakpoint-l) {
      margin: 0 0 0 $spacing;
      flex-grow: 1;
    }
  }
}

.application__project-name {
  .application--submitted-teaser &,
  .application--draft-teaser &,
  .application--form-teaser & {
   font-size: $fontsize-heading-m;
line-height: $lineheight-m;
    font-weight: $font-weight-bold;
    margin: 0 0 $spacing-quarter;
  }
}

.application__project-address {
  .application--submitted-teaser &,
  .application--draft-teaser &,
  .application--form-teaser & {
   font-size: $fontsize-body-m;
line-height: $lineheight-l; // Was 24px.
    margin: 0 0 $spacing-quarter;
  }
}

.application__project-ownership-type {
  .application--submitted-teaser &,
  .application--draft-teaser &,
  .application--form-teaser & {
    font-size: $fontsize-body-s;
    line-height: $lineheight-l; // Was 26px.
    background-color: var(--color-engel);
    color: var(--color-black-90);
    margin: 0 0 $spacing-and-half;
    padding: $spacing-quarter $spacing-half-and-half;
    display: inline-block;

    // Hitas: yellow (matches asuntomyynti-react)
    &--hitas {
      background-color: var(--color-engel);
    }

    // Puolihitas: light yellow (matches asuntomyynti-react)
    &--puolihitas {
      background-color: var(--color-engel-light);
    }

    // HASO: blue (matches asuntomyynti-react)
    &--haso {
      background-color: var(--color-copper-medium-light);
    }
  }
}

.application__date-information {
  .application--draft-teaser &,
  .application--submitted-teaser & {
    list-style: none;
    margin: auto 0 0;
    padding: 0;

    li {
     font-size: $fontsize-body-m;
line-height: $lineheight-l; // Was 24px.
      align-items: center;
      display: flex;
      margin: 0;

      svg {
        margin-right: 12px;
      }

      &:not(:first-child) {
        margin-top: $spacing-half-and-half;
      }
    }
  }

  .application--form-teaser & {
    list-style: none;
    margin: auto 0 0;
    padding: 0;
    width: 100%;

    li {
     font-size: $fontsize-body-m;
line-height: $lineheight-l; // Was 24px.
      align-items: center;
      display: flex;
      margin: 0;

      svg {
        margin-right: 12px;
      }

      &:not(:first-child) {
        margin-top: $spacing-half-and-half;
      }

      &:last-child {
        background-color: var(--color-success-light);
        box-shadow: inset 8px 0 0 0 var(--color-success);
        align-items: center;
        display: flex;
        padding: $spacing-half-and-half $spacing;

        svg {
          margin-right: $spacing-half-and-half;
          color: var(--color-success);
        }
      }
    }
  }
}

.application__actions {
  .application--draft-teaser &,
  .application--submitted-teaser & {
    margin-top: $spacing-and-half;

    @media screen and (min-width: $breakpoint-l) {
      margin-top: 0;
    }

    .hds-button {
      @media screen and (max-width: $breakpoint-l - 1px) {
        width: 100%;
      }
    }
  }
  .application--action {
    margin-top: 10px;
  }
}

.application__lottery {
  background-color: $color-white;
  border: 1px solid $color-black-10;
  border-top: none;
  padding: $spacing-half-and-half;
  margin-top: -1.5rem;
  display: flex;
  justify-content: flex-end;

  &--hide {
    margin-top: 0;
    border: none;
  }

  &-link {
   font-size: $fontsize-body-m;
line-height: $lineheight-l; // Was 24px.
    align-items: center;
    background-color: transparent;
    color: var(--color-bus);
    display: inline-flex;
    font-weight: $font-weight-medium;
    justify-content: center;
    margin: 0;
    padding: $spacing-half-and-half 12px;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
      cursor: pointer;
    }

    &:focus {
      text-decoration: underline;
    }

    &:before {
      // background-image: url("../icons/angle-right--blue.svg");
      background-size: 100%;
      content: "";
      display: inline-block;
      height: 24px;
      margin-right: $spacing-half-and-half;
      width: 24px;
    }

    &--show:before {
      background-image: url("../icons/angle-right--blue.svg");
    }

    &--hide:before {
      background-image: url("../icons/angle-up.svg"); // ** There is no blue angle up **
    }
  }
}

.application__apartments {
  margin-top: -1.6rem !important;

  &--mobile {
    @media screen and (min-width: $breakpoint-xl) {
      display: none;
      visibility: hidden;
    }

    .project__apartments-item {
      &:last-of-type {
        border-bottom: 1px solid var(--color-black-20);
      }
    }
  }

  &--desktop {
    @media screen and (max-width: $breakpoint-xl - 1px) {
      display: none;
      visibility: hidden;
    }

    background-color: $color-white;
    display: flex;
    flex-direction: column;
    width: 100%;
    border: none;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0;
    margin-bottom: 0;
    max-width: 100%;

    thead {
      padding-left: $spacing-double;
      padding-right: $spacing-double;
      background-color: transparent;

      tr {
        width: 100%;
        gap: $spacing-double;
        display: inline-flex;
        align-items: center;

        th {
          font-size: $fontsize-body-m;
line-height: $lineheight-l;
          font-weight: $font-weight-regular;
          text-align: left;
          padding-bottom: $spacing;
          padding-top: $spacing;
          color: $color-black;
        }
      }
    }

    tbody {
      padding-left: $spacing-double;
      padding-right: $spacing-double;
      display: flex;
      flex-direction: column;

      tr {
        border-top: 1px solid var(--color-black-20);
        display: inline-flex;
        align-items: center;
        gap: $spacing-double;
        width: 100%;

        &:last-of-type {
          border-bottom: 1px solid var(--color-black-20);
        }

        &:focus-within {
          box-shadow: inset 0 1px 0 0 var(--color-black-90),
            inset 0 -1px 0 0 var(--color-black-90);
        }

        &:hover {
          background-color: transparent;
          border-top: 1px solid $color-black;
          border-bottom: 1px solid $color-black;
        }

        td {
         font-size: $fontsize-body-l;
line-height: $lineheight-xl; // Was 27px.
          font-weight: $font-weight-regular;
          text-align: left;
          padding-bottom: $spacing-and-half;
          padding-top: $spacing-and-half;
          border-bottom: none !important;

          &:first-of-type {
            min-width: 190px;
            font-weight: $font-weight-bold;

            span:first-of-type {
              font-weight: $font-weight-regular;
              margin-left: $spacing-double;
            }
          }
        }
      }
    }
  }
}

.application__apartments-item-button {
  align-items: center;
  background-color: var(--color-white);
  border-bottom: 0;
  border-left: 0;
  border-radius: 0;
  border-right: 0;
  border-top: 1px solid var(--color-black-20);
  display: flex;
  padding: $spacing;
  width: 100%;
  gap: 12px;

  span {
    font-size: $fontsize-heading-xs;
line-height: $lineheight-xl; // Was 27px.
    color: var(--color-black-90);
    pointer-events: none;

    &:first-of-type {
     font-size: $fontsize-heading-m;
line-height: $lineheight-m;
      font-weight: $font-weight-bold;
    }
  }

  svg {
    flex-shrink: 0;
    margin-left: auto;
    pointer-events: none;
  }

  &:hover {
    cursor: pointer;
  }

  &:focus {
    outline: 1px auto;
  }

  &[aria-expanded="true"] {
    svg {
      transform: rotate(180deg);
    }
  }
}

